PC lab2 concludes

--- a/WTA/LAB2+/templates/base.html
+++ b/WTA/LAB2+/templates/base.html
@@ -11,10 +11,11 @@
 <body>
 
 <div class="top-bar">
+	<div class="zebra">
+	</div>
 	<div class="main-title">
 		<a style="text-decoration:none" href="base.html">HARMYA</a>
 	</div>
-
 	<div class="sub-title">
 		Home Decor &amp; Fashion
 	</div>
