--- a/WTA/LAB2+/templates/base.html
+++ b/WTA/LAB2+/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<link rel="stylesheet" href="../static/css/styles.css">
+	<link rel="stylesheet" href="../static/css/base_styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Archivo+Black&display=swap" rel="stylesheet"> 
 	<link href="https://fonts.googleapis.com/css?family=Libre+Caslon+Text&display=swap" rel="stylesheet">
 	<title> Home </title>
@@ -11,9 +11,20 @@
 <body>
 
 <div class="top-bar">
-	<div class="zebra">
+	<!-- <div id="zebra">
+		<div class="zebra-line" style="background-color:#2A75A9;"></div>
+		<div class="zebra-line" style="background-color:#274257;"></div>
+		<div class="zebra-line" style="background-color:#644436;"></div>
+		<div class="zebra-line" style="background-color:#8F6048;"></div>
+	</div> -->
+
+	<div id="navbar">
+		<a href="signup.html" id="signup">SIGN UP</a>
+		<a href="#" id="signin">SIGN IN</a>	
 	</div>
 	<div class="main-title">
+		
+
 		<a style="text-decoration:none" href="base.html">HARMYA</a>
 	</div>
 	<div class="sub-title">
