form validation complete

--- a/WTA/LAB2+/templates/base.html
+++ b/WTA/LAB2+/templates/base.html
@@ -20,7 +20,7 @@
 
 	<div id="navbar">
 		<a href="signup.html" id="signup">SIGN UP</a>
-		<a href="#" id="signin">SIGN IN</a>	
+		<a href="signin.html" id="signin">SIGN IN</a>	
 	</div>
 	<div class="main-title">
 		
