--- a/WTA/LAB2+/static/css/signin_styles.css
+++ b/WTA/LAB2+/static/css/signin_styles.css
@@ -24,9 +24,9 @@ html {
 	
 }
 
-#signup-container{
+#signin-container{
 	width: 500px;
-	height: 340px;
+	height: 150px;
 	background-color: #B214CC;
 	position: absolute;
 	top:0;
