--- a/WTA/LAB2+/templates/signup.html
+++ b/WTA/LAB2+/templates/signup.html
@@ -5,12 +5,29 @@
 	<link rel="stylesheet" href="../static/css/signup_styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Archivo+Black&display=swap" rel="stylesheet"> 
 	<link href="https://fonts.googleapis.com/css?family=Libre+Caslon+Text&display=swap" rel="stylesheet">
+	<script src="../static/js/signup.js"></script>
 	<title> Sign Up </title>
 </head>
 
 <body>
 <div class=full-container>
 	<div id=signup-container>
+		<form name='registration' onSubmit="return formValidation();">
+		<ul>
+		<li><label for="userid">User id:</label></li>
+		<li><input type="text" name="userid"  /></li>
+		<li><label for="passid">Password:</label></li>
+		<li><input type="password" name="passid" size="12" /></li>
+		<li><label for="username">Name:</label></li>
+		<li><input type="text" name="username" size="50" /></li>
+		<li><label for="address">Address:</label></li>
+		<li><input type="text" name="address" size="50" /></li>
+		<li><label for="email">Email:</label></li>
+		<li><input type="text" name="email" size="50" /></li>
+		<li><label id="gender">Sex:</label></li>
+		<li><input type="radio" name="msex" value="Male" /><span>Male</span></li>
+		<li><input type="radio" name="fsex" value="Female" /><span>Female</span></li>
+		<li><input type="submit" name="signup" value="Sign Up" /></li>
 	</div>
 	<div id=text-container>
 		<div id='welcome-text'>
