--- a/WTA/LAB2+/templates/signin.html
+++ b/WTA/LAB2+/templates/signin.html
@@ -14,16 +14,16 @@
 	<div id=signin-container>
 		<form name='registration' onSubmit="return formValidation();">
 		<ul>
-		<li><label for="userid">User id:</label></li>
+		<li><label for="userid">USER ID:</label></li>
 		<li><input type="text" name="userid"  /></li>
-		<li><label for="passid">Password:</label></li>
+		<li><label for="passid">PASSWORD:</label></li>
 		<li><input type="password" name="passid" size="12" /></li>
 
-		<li><input type="submit" name="signup" value="Sign In" /></li>
+		<li><input type="submit" name="signup" value="SIGN IN" /></li>
 	</div>
 	<div id=text-container>
 		<div id='welcome-text'>
-			Welcome back!
+			Welcome <a style="text-decoration:none" href="base.html">back!</a>
 		</div>
 	</div>
 </div>
