--- a/WTA/LAB2+/static/css/base_styles.css
+++ b/WTA/LAB2+/static/css/base_styles.css
@@ -11,16 +11,22 @@ html {
 
 
 .top-bar {
-	padding-left: 3000px;
-	margin-left: -3000px;
-	padding-right: 3000px;
-	margin-right: -3000px;
-	padding-top: 3000px;
-	margin-top: -3000px;
+	padding-left: 10px;
+	margin-left: -10px;
+	padding-right: 10px;
+	margin-right: -10px;
+	padding-top: 10px;
+	margin-top: -10px;
 	line-height: 1.2;
 	text-align: center;
 	/*box-shadow: 0px 0px 5px;*/
+	/*background-color: #e1e4e8;*/
+	background-color: white;
+	position: sticky; 
+	top: 0;
+	overflow: hidden; 
 	border-bottom: 2px solid #e1e4e8;
+	border-bottom-style: dashed;
 
 }
 
@@ -74,7 +80,7 @@ html {
 }
 
 #signup:hover{
-	background-color: #9B09B3;
+	background-color: #99933D;
 }
 
 #signin {
@@ -84,7 +90,7 @@ html {
 }
 
 #signin:hover{
-	background-color: #19FFBB;
+	background-color: #149ECC;
 }
 
 .main-title a{
@@ -93,14 +99,15 @@ html {
 	color:#FFFFFF;
 	/*text-shadow: 3px 3px 0 #FF9100;*/
 	transition: 0.5s;
-	-webkit-text-stroke: 1px #666;
+	-webkit-text-stroke: 1px #777;
+
 
 }
 
 
 
 .main-title a:hover {
-	color:#FFBA00;
+	color:#FFBB00;
 	-webkit-text-stroke: 1px #000000;
 }
 
