--- a/WTA/LAB2+/static/css/signin_styles.css
+++ b/WTA/LAB2+/static/css/signin_styles.css
@@ -12,8 +12,8 @@ html {
 
 .full-container{
 	width: 500px;
-	height: 250px;
-	background-color: #19FFBB;
+	height: 200px;
+	background-color: #409DFF;
 	position: absolute;
 	top:0;
 	bottom: 0;
@@ -27,7 +27,7 @@ html {
 #signin-container{
 	width: 500px;
 	height: 150px;
-	background-color: #B214CC;
+	background-color: #149ECC;
 	position: absolute;
 	top:0;
 	bottom: 0;
@@ -39,7 +39,7 @@ html {
 
 form li{
 	list-style: none;
-	margin-bottom: 5px;
+	margin-bottom: 6px;
 	color: #FFF;
 	font-family: Archivo Black;
 
@@ -52,12 +52,20 @@ form li{
 	margin-top: 5px;
 	margin-left: 300px;
 	font-size:18px;
-	color: #444;
-	background-color: white;
+	color: white;
+	background-color: transparent;
 	font-family: Archivo Black;
 	border-style: none;
+	transition: 0.5s;
 	outline-style: dashed;
-	outline-color: black;
+	outline-color: transparent;
+	outline-width: 2px;
+}
+
+[type="submit"]:hover {
+	outline-color: white;
+
+
 }
 
 
@@ -78,7 +86,7 @@ form li{
 #welcome-text a{
 	font-family: Archivo Black;
 	font-size: 72px;
-	color: #19FFBB;
+	color: #409DFF;
 	transition: 0.5s;
 	/*text-shadow: 3px 3px 0 #FF9100;*/
 	
@@ -88,6 +96,6 @@ form li{
 
 #welcome-text a:hover {
 	
-	color:#FFBA00;
+	color:#FFBB00;
 	-webkit-text-stroke: 2px #000000;
 }
