--- a/WTA/LAB2+/templates/signup.html
+++ b/WTA/LAB2+/templates/signup.html
@@ -14,20 +14,20 @@
 	<div id=signup-container>
 		<form name='registration' onSubmit="return formValidation();">
 		<ul>
-		<li><label for="userid">User id:</label></li>
+		<li><label for="userid">USER ID:</label></li>
 		<li><input type="text" name="userid"  /></li>
-		<li><label for="passid">Password:</label></li>
+		<li><label for="passid">PASSWORD:</label></li>
 		<li><input type="password" name="passid" size="12" /></li>
-		<li><label for="username">Name:</label></li>
+		<li><label for="username">NAME:</label></li>
 		<li><input type="text" name="username" size="50" /></li>
-		<li><label for="address">Address:</label></li>
+		<li><label for="address">ADDRESS:</label></li>
 		<li><input type="text" name="address" size="50" /></li>
-		<li><label for="email">Email:</label></li>
+		<li><label for="email">EMAIL:</label></li>
 		<li><input type="text" name="email" size="50" /></li>
-		<li><label id="gender">Sex:</label></li>
-		<li><input type="radio" name="msex" value="Male" /><span>Male</span></li>
-		<li><input type="radio" name="fsex" value="Female" /><span>Female</span></li>
-		<li><input type="submit" name="signup" value="Sign Up" /></li>
+		<li><label id="gender">SEX:</label></li>
+		<li><input type="radio" name="msex" value="Male" /><span>MALE</span></li>
+		<li><input type="radio" name="fsex" value="Female" /><span>FEMALE</span></li>
+		<li><input type="submit" name="signup" value="SIGN UP" /></li>
 	</div>
 	<div id=text-container>
 		<div id='welcome-text'>
