--- a/WTA/LAB2+/static/css/base_styles.css
+++ b/WTA/LAB2+/static/css/base_styles.css
@@ -93,6 +93,44 @@ html {
 	background-color: #149ECC;
 }
 
+.feedback {
+	display: none;
+	position: fixed;
+	z-index: 1;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: rgba(0,0,0,0.4);
+}
+
+.feedback-content {
+	background-color: #149ECC;
+	color: white;
+	margin: 15% auto;
+	width: 80%;
+}
+
+#fb-button {
+	/*transform: translate(48%,0);*/
+	position: relative;
+	transform: translateX(49%);
+
+
+	
+}
+
+#fb-button svg{
+	transition: 0.3s;
+}
+
+
+#fb-button svg:hover{
+	fill: #149ECC;
+	transition: 0.3s;
+}
+
 .main-title a{
 	font-family: Archivo Black;
 	font-size: 45px;
