--- a/WTA/LAB2+/templates/base.html
+++ b/WTA/LAB2+/templates/base.html
@@ -5,11 +5,17 @@
 	<link rel="stylesheet" href="../static/css/base_styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Archivo+Black&display=swap" rel="stylesheet"> 
 	<link href="https://fonts.googleapis.com/css?family=Libre+Caslon+Text&display=swap" rel="stylesheet">
-	<script src="../static/js/shrink_navbar.js"></script>
+	<script src="../static/js/base.js"></script>
 	<title> Home </title>
 </head>
 
 <body>
+
+<div id="fb" class="feedback">
+	<div class="feedback-content">
+	FEEDBACK CONTENT
+	</div>
+</div>
 
 <div class="top-bar">
 	<!-- <div id="zebra">
@@ -22,6 +28,14 @@
 	<div id="navbar">
 		<a href="signup.html" id="signup">SIGN UP</a>
 		<a href="signin.html" id="signin">SIGN IN</a>	
+		<div id="fb-button">
+			<svg fill="#999" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M13.473 7.196c-.425-.439-.401-1.127.035-1.552l4.461-4.326c.218-.211.498-.318.775-.318.282 0 .563.11.776.331l-6.047 5.865zm-7.334 11.021c-.092.089-.139.208-.139.327 0 .25.204.456.456.456.114 0 .229-.042.317-.128l.749-.729-.633-.654-.75.728zm6.33-8.425l-2.564 2.485c-1.378 1.336-2.081 2.63-2.73 4.437l1.132 1.169c1.825-.593 3.14-1.255 4.518-2.591l2.563-2.486-2.919-3.014zm7.477-7.659l-6.604 6.405 3.326 3.434 6.604-6.403c.485-.469.728-1.093.728-1.718 0-2.088-2.53-3.196-4.054-1.718zm-1.946 11.333v7.534h-16v-12h8.013l2.058-2h-12.071v16h20v-11.473l-2 1.939z"/>
+			
+			<rect fill-opacity=0 id="btn" x="0" y="0" width="32" height="30">
+
+			</svg>
+		</div>
+
 	</div>
 	<div class="main-title">
 		
